--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
 .btu{
-	width: 300px
-	
-
-
-
+	width: 80%
+    height: 100px;
+    margin: 10px;
+    font-size: 30px;
+}
+#titleImg{
+	    width: 90%;
+}
+body{
+	    text-align: center;
+}
+@font-face {
+    font-family: myFont;   
+    src: url("../font/myFont.ttf");
+}
+h1{
+	     font-family: myFont;
+}
+.form-control{
+	    width: 90%;
+	    margin: auto;
 }
